# skypro_dz31

./: db.sqlite3  manage.py  permissions.py  pyproject.toml  pytests.ini
ads/: models.py  views.py
ads/ad/: serializers.py  urls.py  views.py
ads/category/: serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ad_price.py
ads/selection/: serializers.py  urls.py  views.py
datasets/: ad.json  user.json
skypro_dz31/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py  simple_test.py
tests/ad/: ad_create_test.py  ad_detail_test.py  ad_list_test.py
tests/selection/: selection_create_test.py
users/: admin.py  models.py
users/location/: serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_birth_date.py  0003_alter_user_birth_date.py
users/user/: serializers.py  urls.py  views.py
